fix that ugly gap between the content and the footer

--- a/docroot/fsfw.css
+++ b/docroot/fsfw.css
@@ -305,8 +305,11 @@ a:focus:visited {
     text-decoration: underline;
 }
 
-
-
+#content-container:after {
+    content: "";
+    display: table;
+    clear: both;
+}
 
 /********** special rules for themen.html **********/
 
